# TestTask

./: CMakeLists.txt  README.md  config.txt  main.cpp
include/: ConfigReader.h  FileMover.h  FileWorker.h  Parser.h
input_data/: test.xml
output_data/: out.txt
src/: ConfigReader.cpp  FileMover.cpp  FileWorker.cpp  Parser.cpp
